import { StyleSheet } from "react-native";

import EditScreenInfo from "@/components/EditScreenInfo";
import { SignOutButton } from "@/components/SignOutButton";
import { Text, View } from "@/components/Themed";
import UserInfo from "@/components/UserInfo";

export default function TabOneScreen() {
  return (
    <View style={styles.container}>
      <UserInfo />
      <Text style={styles.title}>Tab One</Text>
      <View
        style={styles.separator}
        lightColor="#eee"
        darkColor="rgba(255,255,255,0.1)"
      />
      <EditScreenInfo path="app/(tabs)/index.tsx" />
      <SignOutButton />
    </View>
  );
}

const styles = StyleSheet.create({
  container: {
    flex: 1,
    alignItems: "center",
    justifyContent: "center",
  },
  title: {
    fontSize: 20,
    fontWeight: "bold",
  },
  separator: {
    marginVertical: 30,
    height: 1,
    width: "80%",
  },
});
